# AlphaFlow-Real-Time-Microstructure-Trading-Engine

./: CMakeLists.txt  README.md  main.cpp
backend/: backtest_example.cpp  backtester.hpp  metrics.hpp  regime.hpp  trade_log.hpp  walk_forward.cpp
core/: example.cpp  implmentaion_summary.txt  logger.hpp  ring_buffer.hpp  test.hpp  time.hpp  types.hpp
data/: synthetic_feed.hpp
execution/: execution_engine.hpp  fill_model.hpp  impact_model.hpp  order.hpp  order_book_sim.hpp  queue_model.hpp  signal.hpp
features/: feature.hpp  feature.txt  microprice.hpp  normalizer.hpp  ofi.hpp  spread.hpp  test.cpp  trade_intensity.hpp
strategy/: microstructure_strategy.hpp  signal_aggregator.hpp  stat_arb.hpp  strategy.hpp  strategy_base.hpp
